# fxmediainfo

./: CMakeLists.txt  README.md  TODO  contributors.txt  fxmediainfo.cxx  fxmediainfo.desktop  help.cxx  help.hpp  icons.cxx  icons.hpp  pastebin.hpp  program.cxx  program.hpp  registry.cxx  registry.hpp  run_xdg_open.cxx  run_xdg_open.hpp  syslog.hpp  window.cxx  window.hpp
Languages/: fxmediainfo.pot  updatepot.sh
Libraries/: fox-dev-url
docs/: help.html  help.t2t
